<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:id="@+id/root_element"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="155dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/app_in_name"
            android:textAlignment="center"
            android:textColor="@android:color/widget_edittext_dark"
            android:textSize="60sp"

            app:fontFamily="@font/almendra_sc" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/app_name_after"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            app:fontFamily="@font/convergence" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:text="@string/text_bottom"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        app:fontFamily="@font/convergence" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_margin="15dp"
        android:layout_above="@+id/text_bottom"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:background="@drawable/btn_sign_in"
            android:layout_weight="1"
            android:layout_marginRight="6dp"
            android:text="@string/btnSignIn" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:textColor="@android:color/white"
            android:background="@drawable/btn_register"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="6dp"
            android:text="@string/btnRegister" />
    </LinearLayout>

</RelativeLayout>